Implement MyDictionaryActivity and fix a small mistake in SearchViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">YED</string>
+    <string name="title_activity_my_dictionary">MyDictionaryActivity</string>
 </resources>
