--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">YED</string>
     <string name="title_activity_my_dictionary">MyDictionaryActivity</string>
+    <string name="title_activity_learn">LearnActivity</string>
 </resources>
